# job-aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.MD  Dockerfile  Makefile  README.md  cloudbuild.remote.yaml  cloudbuild.yaml  compose.yaml  index.yaml  job-aggregator-0.1.0.tgz  job-aggregator-0.1.3.tgz  job-aggregator-0.1.4.tgz  job-aggregator-0.1.5.tgz  job-aggregator-0.1.7.tgz  job-aggregator-0.1.8.tgz  job-aggregator-0.1.9.tgz  pyproject.toml
Helm.Base/: Chart.yaml  values.yaml
app/: __init__.py  cli.py  config.py  database.py  logging.py  main.py  models.py  schemas.py
candidate_service/: __init__.py  crawler_client.py  job_projection.py  main.py  matching.py  parsing.py  routes.py  scheduler.py  schemas.py  service.py  task_queue.py  worker.py
crawler_service/: config.py  main.py  routes.py  schemas.py  service.py
docker/: candidate-api.Dockerfile  candidate-worker.Dockerfile  crawler-api-browser.Dockerfile  crawler-api.Dockerfile  job-api.Dockerfile  ui-web-entrypoint.sh  ui-web.Dockerfile  ui-web.nginx.conf
helm-chart/: Chart.yaml  values.yaml
k8s/: candidate-api.yaml  candidate-worker.yaml  crawler-api.yaml  job-api.yaml  nats.yaml
requirements/: crawler-browser.txt  crawler-common.txt
scripts/: build_agent.py
shared/: __init__.py  database.py  logging.py  models.py  persistence.py  schemas.py
tests/: test_business_rules.py  test_candidate_service.py  test_exporter.py  test_ingest_api.py  test_master_data.py  test_mock_provider.py
ui-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+93 files in other folders)
