[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-aggregator-backend"
version = "0.1.0"
description = "Backend service for collecting authorized job listings and exporting JSON/XLSX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pypdf>=5.0,<6",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
crawler = [
  "beautifulsoup4>=4.12,<5",
  "crawl4ai>=0.9,<1",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
job-aggregator = "app.cli:main"
candidate-worker = "candidate_service.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "candidate_service", "crawler_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
